deploymentconfig.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: eap64-basic-s2i
      application: tasks
    name: tasks
    namespace: tasks-dev
  spec:
    replicas: 1
    selector:
      deploymentConfig: tasks
    strategy:
      activeDeadlineSeconds: 21600
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      type: Recreate
    template:
      metadata:
        labels:
          app: eap64-basic-s2i
          application: tasks
          deploymentConfig: tasks
        name: tasks
      spec:
        containers:
        - env:
          - name: OPENSHIFT_KUBE_PING_LABELS
            value: application=tasks
          - name: OPENSHIFT_KUBE_PING_NAMESPACE
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
          - name: HORNETQ_CLUSTER_PASSWORD
            value: GeIP4AMB
          - name: HORNETQ_QUEUES
          - name: HORNETQ_TOPICS
          - name: JGROUPS_CLUSTER_PASSWORD
            value: nTLxtRnN
          - name: AUTO_DEPLOY_EXPLODED
            value: "false"
          image: docker-registry.default.svc:5000/tasks-dev/tasks@sha256:525a94e318178eda723951f2301bfdaa4e72e4904d242775af1b7051578c4792
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
              - /bin/bash
              - -c
              - /opt/eap/bin/livenessProbe.sh
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: tasks
          ports:
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 8888
            name: ping
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/bash
              - -c
              - /opt/eap/bin/readinessProbe.sh
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
    test: false
    triggers:
    - imageChangeParams:
        containerNames:
        - tasks
        from:
          kind: ImageStreamTag
          name: tasks:TestingCandidate-1.7
          namespace: tasks-dev
      type: ImageChange
kind: List
metadata: {}
resourceVersion: ""
selfLink: ""
