service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: The web server's http port.
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: 2018-02-18T22:47:02Z
    labels:
      app: eap64-basic-s2i
      application: tasks
      template: eap64-basic-s2i
      xpaas: 1.4.0
    name: tasks
    namespace: tasks-dev
    resourceVersion: "32699"
    selfLink: /api/v1/namespaces/tasks-dev/services/tasks
    uid: a2a43159-14fd-11e8-93a4-16d7b91c7cc4
  spec:
    clusterIP: 172.31.112.105
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentConfig: tasks
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata: {}
resourceVersion: ""
selfLink: ""
